# adventofcode2021

./: Cargo.toml
src/: lib.rs
