[package]
name = "adventofcode2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.1"
once_cell = "1.8.0"
pretty_assertions = "1.0.0"
proconio = "0.4.3"
regex = "1.5.4"
